# libhand

examples/: CMakeLists.txt  h_movement.cpp  show_gestures_two_hands.cpp  source-ld-library-path.sh
examples/old-stuff/: build-and-fix-examples-indigo.sh  build-and-fix-examples-kinetic.sh  build-and-fix-examples.sh  qt-creator-cmake-arguments.txt
hand_cpp/: CMakeLists.txt  pose-designer-link.txt  source-ld-library-path.sh
hand_cpp/source/: image_to_hog_calculator.cc
poses/: 01_number_one.yml  02_number_two.yml  03_number_three.yml  04_number_four.yml  05_number_five.yml  06_start_msg.yml  07_end_comms.yml  08_boat_left.yml  09_carry_left.yml  10_here.yml  11_take_a_photo.yml  12_do_a_mosaic.yml
poses/unused/: 02_number_two_2.yml  03_number_three_2.yml  6_start_msg_3.yml  6_start_msg_4.yml  7_end_comms_1.yml  8_boat_left_2.yml  8_boat_left_3.yml  8_boat_left_4.yml  994_thumb_up.yml
